# tool-installer

./: .gitignore  AGENTS.md  CONTEXT.md  PLAN.md  README.md  SPEC.md  pyproject.toml
docs/: dotfiles-migration-plan.md  draft-cargo-binstall-first.md  draft-manifest-manager-config.md  plan-manifest-manager-config.md
examples/: manifest.toml  tools.toml
examples/dotfiles/: manifest.toml  tools.toml
examples/scripts/: install-example
scripts/: build-single  install-single
src/tool_installer/: __init__.py  __main__.py  cli.py  environment.py  errors.py  executor.py  github_token.py  models.py  parser.py  resolver.py  strategy.py  toml_loader.py
src/tool_installer/managers/: __init__.py  base.py  commands.py  github_release.py  script.py
tests/: test_binstall_first.py  test_cli_integration.py  test_cli_smoke.py  test_distribution.py  test_examples.py  test_executor_managers.py  test_manager_apt_brew.py  test_manager_github_release.py  test_manager_runtime_tools.py  test_manager_rust_mise.py  test_manager_script.py  test_models.py  test_network_config.py  test_parser_resolver_strategy.py  test_spec_conformance.py  test_sudo_privilege.py  test_toml_loader.py
